fix close button disappearing behind stuff

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -40,6 +40,7 @@
 }
 
 .button_clear {
+  z-index: 99999;
   cursor: pointer;
   float: right;
   top: 40px;
@@ -59,6 +60,5 @@
 }
 
 .close_icon {
-  //something aloing these lines:
   // fill: black;
 }
